# tcg-restock-watcher

./: FIXES_2026-07-01.md  README.md  RESUME_PROMPT.md  SESSION_HISTORY.md  config.toml  pyproject.toml
.github/workflows/: build-index.yml  spike.yml  watch.yml
data/: fx.json  price_index.json
docs/: LOCAL_RUNNER.md  PAT_ROTATION.md
docs/superpowers/: EGRESS_IP_SCOPING.md  PHASE2_HANDOFF.md  PHASE2_SCOPING.md
ops/: com.mrmadison.tcg-restock-watcher.plist
scripts/: commit_state.sh  run_local.sh  spike_feeds.py
src/tcg_watcher/: __main__.py  config.py  diff.py  (+7 more)
state/: 3kcollectables.json  401games.json  763collectibles.json  allpoketcg.json  bulbacards.json  collectorsrow.json  collectorstore.json  deckoutgaming.json  doubleinfinitygaming.json  galactictoys.json  hobbiesville.json  matrixtcg.json  paladincards20.json  pkmncolosseum.json  pokelegendstcg.json  rarecandy.json  realgoodeal.json  royalsakuratcg.json  safarizone.json  sakurascardshop.json  shinypax.json  shopchieffpokeman.json  skyboxct.json  smokeandmirrorshobby.json  spoilsandloot.json  tcgsorted.json  tcgstadium.json  thepokehive.json  tradingcardmarket.json  tygerstcgden.json  zulusgames.json
tests/: test_build_index.py  test_commit_state.py  test_config.py  test_diff.py  test_discord_poster.py  test_filtering.py  test_http.py  test_match.py  test_models.py  test_models_verdict.py  test_notify.py  test_notify_verdict.py  test_oracle.py  test_rarecandy_adapter.py  test_reconcile.py  test_runner.py  test_shopify_adapter.py  test_smoke.py  test_state.py  test_tcgcsv.py  test_wix_adapter.py
(+15 files in other folders)
