[project]
name = "tcg-watcher"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["httpx>=0.27"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcg_watcher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
